--- a/C++/C++学习笔记/03_C++提高编程.md
+++ b/C++/C++学习笔记/03_C++提高编程.md
@@ -5960,9 +5960,253 @@ int main()
 
 #### **5.5.2 fill**
 
-**功能**
+**功能描述：**
+
+- 向容器中填充指定的元素
+
+**函数原型：**
+
+- ```C++
+  // 向容器中填充元素
+  // begin 开始迭代器
+  // end 结束迭代器
+  // value 填充值
+  fill(iterator begin, iterator end, value);
+  ```
+
+**示例：**
+
+```C++
+#include <iostream>
+using namespace std;
+#include <vector>
+#include <numeric>
+#include <string>
+#include <algorithm>
+
+// 常用的算术生成算法 fill
+int main()
+{
+	vector<int> vec;
+	vec.resize(10, 1);
+
+	// fill 向容器中填充值
+	fill(vec.begin(), vec.begin() + 2, 100);
+	for_each(vec.begin(), vec.end(), [](int value) {
+		cout << value << " ";
+	});
+	cout << endl;
+
+	system("pause");
+	return 0;
+}
+```
+
+**总结：**利用 fill 可以将容器区间内元素填充为指定的值
+
+***
+
+### **5.6 常用集合算法**
+
+**学习目标：**
+
+- 掌握常用的集合算法
+
+**算法简介：**
+
+- ```C++
+  set_intersection		// 请两个容器的交集
+  ```
+
+- ```C++
+  set_union			// 求两个容器的并集
+  ```
+
+- ```C++
+  set_difference		// 求两个容器的差集
+  ```
+
+#### **5.6.1 set_intersection**
+
+**功能描述：**
+
+- 求两个容器的交集
+
+**函数原型：**
+
+- ```C++
+  // 求两个集合的交集
+  // begin1 	容器1的开始迭代器
+  // end1 	容器1的结束迭代器
+  // begin2 	容器2的开始迭代器
+  // end2 	容器2的结束迭代器
+  // destBegin 目标容器的开始迭代器
+  set_intersection(iterator begin1, iterator end1, iterator begin2, iterator end2, iterator destBegin);
+  ```
+
+**示例：**
+
+```C++
+#include <iostream>
+using namespace std;
+#include <vector>
+#include <algorithm>
+
+// 常用集合算法 set_intersection
+int main()
+{
+	vector<int> vec1;
+	vector<int> vec2;
+	for (size_t i = 0; i < 10; i++)
+	{
+		vec1.push_back(i);
+		vec2.push_back(5 + i);
+	}
+	// 声明一个目标容器
+	vector<int> destVec;
+	// 给目标容器提前开辟空间
+	// 最特殊情况， 大容器包含小容器  开辟的空间取小容器的size
+	int destSize = vec1.size() < vec2.size() ? vec1.size() : vec2.size();
+	destVec.resize(destSize);
+	vector<int>::iterator destEnd = set_intersection(vec1.begin(), vec1.end(), vec2.begin(), vec2.end(), destVec.begin());
+	vector<int> tarVec = vector<int>(destVec.begin(), destEnd);
+	for_each(tarVec.begin(), tarVec.end(), [](int value) {
+		cout << value << " ";
+	});
+	cout << endl;
+
+	system("pause");
+	return 0;
+}
+```
+
+#### **5.6.2 set_union**
+
+**功能描述：**
+
+- 求两个集合的并集
+
+**注意：两个集合必须是有序序列**
+
+**函数原型：**
+
+- ```C++
+  // 求两个集合的并集
+  // begin1 容器1开始迭代器
+  // end1 容器1结束迭代器
+  // begin2 容器2开始迭代器
+  // end2 容器2结束迭代器
+  // destBegin 目标容器开始迭代器
+  set_union(iterator begin1, iterator end1, iterator begin2, iterator end2, iterator destBegin);
+  ```
+
+**示例：**
+
+```C++
+#include <iostream>
+using namespace std;
+#include <vector>
+#include <algorithm>
+
+// 常用集合算法 set_union
+int main()
+{
+	vector<int> vec1;
+	vector<int> vec2;
+	for (size_t i = 0; i < 10; i++)
+	{
+		vec1.push_back(i);
+		vec2.push_back(0+ i);
+	}
+	// 声明一个目标容器
+	vector<int> destVec;
+	// 给目标容器提前开辟空间
+	// 最特殊情况， 两个容器没有一样 的元素  开辟的空间取两个容器大小之和
+	int destSize = vec1.size() + vec2.size();
+	destVec.resize(destSize);
+	vector<int>::iterator destEnd = set_union(vec1.begin(), vec1.end(), vec2.begin(), vec2.end(), destVec.begin());
+	vector<int> tarVec = vector<int>(destVec.begin(), destEnd);
+	for_each(tarVec.begin(), tarVec.end(), [](int value) {
+		cout << value << " ";
+	});
+	cout << endl;
+
+	system("pause");
+	return 0;
+}
+```
+
+**总结：**
+
+- 求并集的两个集合必须是有序序列
+- 目标容器开辟空间需要是两个容器大小相加
+- set_union 返回值是并集中最后一个元素的位置
+
+### **5.6.3 set_difference**
+
+**功能描述：**
+
+- 求两个容器的差集
+
+**注意：两个容器都必须是有序序列（升序）。**
+
+**函数原型：**
+
+- ```C++
+  // 求两个容器的差集  容器1 - 容器2
+  // begin1 容器1的开始迭代器
+  // end1 容器1的结束迭代器
+  // begin2 容器2的开始迭代器
+  // end2 容器2的结束迭代器
+  // destBegin 目标容器的开始迭代器
+  set_difference(iterator begin1, iterator enn1, iterator begin2, iterator end2, iterator destBegin);
+  ```
+
+**示例：**
+
+```C++
+#include <iostream>
+using namespace std;
+#include <vector>
+#include <algorithm>
+
+// 常用集合算法 set_difference
+int main()
+{
+	vector<int> vec1;
+	vector<int> vec2;
+	for (size_t i = 0; i < 10; i++)
+	{
+		vec2.push_back(10 + i);
+	}
+	vec1.push_back(2);
+	vec1.push_back(3);
+	vec1.push_back(4);
+	// 声明一个目标容器
+	vector<int> destVec;
+	// 给目标容器提前开辟空间
+	// 最特殊情况， 两个容器没有一样 的元素  开辟的空间取容器1的大小
+	int destSize = vec1.size();
+	destVec.resize(destSize);
+	// 求两个容器的差集 vec1 - vec2
+	vector<int>::iterator destEnd = set_difference(vec1.begin(), vec1.end(), vec2.begin(), vec2.end(), destVec.begin());
+	vector<int> tarVec = vector<int>(destVec.begin(), destEnd);
+	for_each(tarVec.begin(), tarVec.end(), [](int value) {
+		cout << value << " ";
+	});
+	cout << endl;
+
+	system("pause");
+	return 0;
+}
+```
+
+**总结：**
+
+- 求差集的两个集合必须是有序序列
+- 目标容器开辟的空间需要取前一个容器（容器1）的大小
+- set_difference返回值即是差集中最后一个元素的位置的迭代器
 
 ***
 
 ***
-
