--- a/C++/C++学习笔记/02_C++核心编程.md
+++ b/C++/C++学习笔记/02_C++核心编程.md
@@ -1118,10 +1118,12 @@ class 子类 : 继承方式 父类
 **继承方式有三种：**
 
 * 公共继承
+
 * 保护继承
+
 * 私有继承
 
-<img src="D:/GitProgram/SoftLiu_Utils/C++/C++学习笔记/继承.png" alt="**继承**" style="zoom:100%;" />
+  ![继承](继承.png)
 
 #### **3.6.2 继承中的对象模型**
 
